# cargo-bavy

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  dependencies.yml
assets/.cargo/: config.toml
assets/.github/workflows/: ci.yaml  release-wasm.txt  release.yaml
assets/licenses/: LICENSE-MIT
assets/wasm/: gitignore.txt
src/: cargo.rs  cli.rs  env.rs  feature.rs  files.rs  http_server.rs  license.rs  main.rs  rustup.rs  tools.rs  utils.rs  wasm_bindgen.rs
src/check/: args.rs  cli.rs  mod.rs
src/new/: cli.rs  context.rs  feature.rs  license.rs  mod.rs  utils.rs
src/new/bevy_features/: mod.rs
src/new/compile_features/: dependencies.rs  fast_linker.rs  mod.rs  nightly.rs  rust_analyzer_bevy_dynamic.rs  wasm.rs
src/new/project_features/: license.rs  mod.rs  workflows.rs
src/run/: args.rs  cli.rs  mod.rs
