[package]
name = "cargo-bavy"
version = "0.2.0"
edition = "2021"
description = "A third-party command line utility for the Bevy game engine."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TimJentzsch/cargo-bevy-mod"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cli", "bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", default-features = false }
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
dialoguer = "0.10.2"
fs_extra = "1.2.0"
toml_edit = "0.17.1"
